# AggreGator3.1

./: README.md
devel/: .catkin  .rosinstall  setup.sh
devel/include/shared_files/: Angle.h  Bucket.h  Drive.h  Encoder.h  IR.h  Ladder.h  Laser.h  Motor.h  ReadI2CRegisterRequest.h  ReadI2CRegisterResponse.h  ReadI2CRequest.h  ReadI2CResponse.h  WriteI2C.h  WriteI2CRegister.h
devel/lib/pkgconfig/: robot_control.pc  shared_files.pc
devel/lib/python2.7/dist-packages/shared_files/msg/: _Angle.py  _Bucket.py  _Drive.py  _Encoder.py  _IR.py  _Ladder.py  _Laser.py  _Motor.py  _WriteI2C.py  __init__.py
devel/lib/python2.7/dist-packages/shared_files/srv/: _ReadI2C.py
devel/lib/robot_control/: robot_control_node
devel/lib/shared_files/: shared_files_node
devel/share/common-lisp/ros/shared_files/msg/: Angle.lisp  Bucket.lisp  Drive.lisp  Encoder.lisp  IR.lisp  Ladder.lisp  Laser.lisp  Motor.lisp  WriteI2C.lisp  _package.lisp  _package_Encoder.lisp  _package_IR.lisp  _package_Motor.lisp  shared_files-msg.asd
devel/share/common-lisp/ros/shared_files/srv/: ReadI2C.lisp
devel/share/robot_control/cmake/: robot_controlConfig.cmake
devel/share/shared_files/cmake/: shared_files-msg-paths.cmake  shared_filesConfig.cmake
src/: GoGators.launch  GoGators.sh
src/robot_control/: CMakeLists.txt
src/robot_control/src/: robot_control_node.cpp
src/shared_files/: CMakeLists.txt  package.xml
src/shared_files/msg/: Angle.msg  Bucket.msg  Drive.msg  Encoder.msg  IR.msg  Laser.msg  Motor.msg
